--- a/NetworkProbabilityDownloader/WebContent/WEB-INF/web.xml
+++ b/NetworkProbabilityDownloader/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>BIDS</display-name>
+  <display-name>NetworkProbabilityDownloader</display-name>
   <servlet>
     <servlet-name>edu.umn.midb.population.atlas.servlet.NetworkProbabilityDownloader</servlet-name>
     <servlet-class>edu.umn.midb.population.atlas.servlet.NetworkProbabilityDownloader</servlet-class>
@@ -10,12 +10,47 @@
     <servlet-name>edu.umn.midb.population.atlas.servlet.NetworkProbabilityDownloader</servlet-name>
     <url-pattern>/NPViewerDownloaderServlet</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>edu.umn.midb.population.atlas.servlet.SubscriptionHandlerServlet</servlet-name>
+    <servlet-class>edu.umn.midb.population.atlas.servlet.SubscriptionHandlerServlet</servlet-class>
+    <load-on-startup>2</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>edu.umn.midb.population.atlas.servlet.SubscriptionHandlerServlet</servlet-name>
+    <url-pattern>/SubscriptionHandlerServlet</url-pattern>
+  </servlet-mapping>
+  
+  
+ <!--
+ <security-constraint>
+ <web-resource-collection>
+ <web-resource-name>Protected Context</web-resource-name>
+ <url-pattern>/*</url-pattern>
+ </web-resource-collection>
+ -->
+
+ <!-- auth-constraint goes here if you requre authentication -->
+
+ <!--
+ <user-data-constraint>
+ <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+ </user-data-constraint>
+ </security-constraint>
+ -->
+  
+  
   <welcome-file-list>
+  
+      <welcome-file>NPViewerDownloaderServlet</welcome-file>
+  
+  <!--
     <welcome-file>/HTML/network_probability_downloader.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
+  -->
   </welcome-file-list>
 </web-app>
